--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,38 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+.keyboard {
+  display: flex;
+}
+
+.key {
+  width: 60px;
+  height: 200px;
+  margin: 2px;
+}
+
+.white-key {
+  background-color: white;
+  border: 1px solid black;
+}
+
+.key-sharp {
+  background-color: black;
+  color: white;
+  height: 120px;
+  position: relative;
+  margin-left: -30px;
+  margin-right: -30px;
+  z-index: 1;
+}
+
+.active-key {
+  background-color: yellow;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
